[Add]各ページのリンク

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,11 +6,65 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <!-- FontAwesomeの読み込み -->
+    <script src="https://kit.fontawesome.com/5ede89d9f7.js" crossorigin="anonymous"></script>
+
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
+    <header>
+      <a href="/"><span>Bookers</span></a>
+      <% if user_signed_in? %>
+        <li>
+          <%= link_to user_path(current_user.id) do %>
+            <i class="fa-solid fa-house-chimney"></i> Home
+          <% end %>
+        </li>
+        <li>
+          <%= link_to users_path do %>
+            <i class="fa-solid fa-users"></i> Users
+          <% end %>
+        </li>
+        <li>
+          <%= link_to books_path do %>
+            <i class="fa-solid fa-book-open"></i> Books
+          <% end %>
+        </li>
+        <li>
+          <%= link_to destroy_user_session_path, method: :delete do %>
+            <i class="fa-solid fa-right-from-bracket"></i> Log out
+          <% end %>
+        </li>
+      <% else %>
+        <li>
+          <%= link_to root_path do %>
+            <i class="fa-solid fa-house-chimney"></i> Home
+          <% end %>
+        </li>
+        <li>
+          <%= link_to about_path do %>
+            <i class="fa-solid fa-link"></i> About
+          <% end %>
+        </li>
+        <li>
+          <%= link_to new_user_registration_path do %>
+            <i class="fa-solid fa-user-plus"></i> Sign up
+          <% end %>
+        </li>
+        <li>
+          <%= link_to new_user_session_path do %>
+            <i class="fa-solid fa-right-to-bracket"></i> Log in
+          <% end %>
+        </li>
+      <% end %>
+     </header>
     <%= yield %>
   </body>
+  <footer>
+    <div>
+      <p>CopyRight Infratop.inc</p>
+    </div>
+  </footer>
 </html>
