[Add]部分テンプレート

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,11 +2,8 @@
 
 <!--User info-->
 <!--プロフィール編集ボタン-->
-<%= render 'users/user_info', user: @user %>
-
 <!--New book-->
-<%= render 'new_book', newbook: @newbook %>
-
+<%= render 'users/user_info', user: @user, newbook: @newbook %>
 
 <!--Books 投稿一覧-->
 <h2>Books</h2>
