--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,10 +2,8 @@
 
 <!--User info-->
 <!--プロフィール編集ボタン-->
-<%= render 'user_info', user: @user %>
-
 <!--New book-->
-<%= render 'books/new_book', newbook: @newbook %>
+<%= render 'user_info', user: @user, newbook: @newbook%>
 
 <!--Users-->
 <h2>Users</h2>
