--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,35 +1,9 @@
 <h1>books#show</h1>
 
 <!--User info-->
-<h2>User info</h2>
-  <%= image_tag @book.user.get_profile_image(100,100) %>
-  <table>
-    <tr>
-      <th>name</th>
-      <th><%= @book.user.name %></th>
-    </tr>
-    <tr>
-      <th>introduction</th>
-      <th><%= @book.user.introduction %></th>
-    </tr>
-  </table>
-
 <!--プロフィール編集ボタン-->
-<div>
-  <% if @book.user.id == current_user.id %>
-    <%= link_to edit_user_path(@user) do %>
-      <i class="fa-solid fa-user-gear"></i>
-    <% end %>
-  <% else %>
-    <%= link_to user_path(@user.id) do %>
-      <i class="fa-solid fa-user-gear"></i>
-    <% end %>
-  <% end %>
-</div>
-
-
 <!--New book-->
-<%= render 'new_book', newbook: @newbook %>
+<%= render 'users/user_info', user: @book.user, newbook: @newbook %>
 
 <!--Book detail bookの詳細ページ-->
 <h2>Book detail</h2>
@@ -49,7 +23,9 @@
         <td><%= @book.body %></td>
         <td>
           <!--Editボタン-->
-          <%= link_to "Edit", edit_book_path(@book.id) %></td>
+          <% if @book.user == current_user %>
+            <%= link_to "Edit", edit_book_path(@book.id) %></td>
+          <% end %>
         <td>
           <!--Destroyボタン-->
           <% if @book.user == current_user %>
