[Add]バリデーション

--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,16 +1,6 @@
-<!--ヘッダー-->
-<!--Bookers-->
-<!--Home-->
-<!--About-->
-<!--Sign up-->
-<!--Login-->
-
-<!--サインアウト時メッセージ「Signed out successfully.」-->
-
-<h1>Welcome to <strong>Bookers!!</strong></h1>
-<!--本のアイコン入れる-->
+<h1>Welcome to <i class="fa-solid fa-book"></i><strong>Bookers!!</strong></h1>
 <!--strong cssつける-->
 
-<p>In <strong>Bookers</strong>, </p>
+<p>In <i class="fa-solid fa-book"></i><strong>Bookers</strong>, </p>
 <p>you can share and exchange your opinions , inpressions , and emotions</p>
 <p>about various books!</p>
