--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,12 +59,14 @@
           <% end %>
         </li>
       <% end %>
-     </header>
-    <%= yield %>
+    </header>
+  <%= flash[:notice] %>
+  <%= yield %>
   </body>
   <footer>
     <div>
       <p>CopyRight Infratop.inc</p>
     </div>
   </footer>
+
 </html>
