--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,3 +1,12 @@
+<% if @newbook.errors.any? %>
+  <%= @newbook.errors.count %> errors prohibited this obj from being saved:
+  <ul>
+    <% @newbook.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
+
 <h1>books#index</h1>
 
 <!--User info-->
