--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,29 +1,34 @@
-<% if @book.errors.any? %>
-  <%= @book.errors.count %> errors prohibited this obj from being saved:
-  <ul>
-    <% @book.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-    <% end %>
-  </ul>
-<% end %>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+      <h1>Editing Book</h1>
 
-<h1>books#edit</h1>
+      <% if @book.errors.any? %>
+        <h3><%= @book.errors.count %> errors prohibited this obj from being saved:</h3>
+        <ul>
+          <% @book.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+        </ul>
+      <% end %>
 
-<h1>Editing Book</h1>
-<%= form_with model: @book do |f| %>
-  <div>
-    <label for="book_title">Title</label><br>
-      <%= f.text_field :title, id:"book_title" %>
-  </div>
-  <div>
-    <label for="book_opinion">Opinion</label><br>
-      <%= f.text_area :body, id:"book_opinion" %>
-  </div>
-  <div>
-  <%= f.submit 'Update Book' %>
-  </div>
-<% end %>
+      <%= form_with model: @book do |f| %>
+        <div class="form-group">
+          <label for="book_title">Title</label><br>
+            <%= f.text_field :title, class:"form-control book_title" %>
+        </div>
+        <div class="form-group">
+          <label for="book_opinion">Opinion</label><br>
+            <%= f.text_area :body, class:"form-control book_body" %>
+        </div>
+        <div class="form-group">
+          <%= f.submit "Update Book", class:"btn btn-success" %>
+        </div>
+      <% end %>
 
-<%= link_to "Show", book_path(@book.id) %>
-<%= "|" %>
-<%= link_to "Back", books_path %>
+      <%= link_to "Show", book_path(@book.id) %>
+      <%= "|" %>
+      <%= link_to "Back", books_path %>
+    </div>
+  </div>
+</div>
