--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,46 +1,48 @@
-<% if @newbook.errors.any? %>
-  <%= @newbook.errors.count %> errors prohibited this obj from being saved:
-  <ul>
-    <% @newbook.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-    <% end %>
-  </ul>
-<% end %>
+<div class="container px-5 px-sm-0">
+  <% if @newbook.errors.any? %>
+    <h3><%= @newbook.errors.count %> errors prohibited this obj from being saved:</h3>
+    <ul>
+      <% @newbook.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  <% end %>
 
-<h1>books#index</h1>
+  <div class="row">
+    <div class="col-md-3">
+      <!--部分テンプレートUser info-->
+      <%= render 'users/user_info', user: @user, newbook: @newbook %>
+    </div>
 
-<!--User info-->
-<!--プロフィール編集ボタン-->
-<!--New book-->
-<%= render 'users/user_info', user: @user, newbook: @newbook %>
-
-<!--Books 投稿一覧-->
-<h2>Books</h2>
-  <div>
-    <table>
-      <thead>
-        <tr>
-          <th></th>
-          <th>Title</th>
-          <th>Opinion</th>
-        </tr>
-      </thead>
-      <tbody>
-        <% @books.each do |book| %>
-        <tr>
-          <td>
-            <%= link_to user_path(book.user.id) do %>
-              <%= image_tag book.user.get_profile_image(80,80) %>
+    <div class="col-md-8 offset-md-1">
+      <!--Books 投稿一覧-->
+      <h2>Books</h2>
+        <table class="table table-hover table-inverse">
+          <thead>
+            <tr>
+              <th></th>
+              <th>Title</th>
+              <th>Opinion</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @books.each do |book| %>
+            <tr>
+              <td>
+                <%= link_to user_path(book.user.id) do %>
+                  <%= image_tag book.user.get_profile_image(80,80) %>
+                <% end %>
+              </td>
+              <td>
+                <%= link_to book_path(book.id) do %>
+                  <%= book.title %>
+                <% end %>
+              </td>
+              <td><%= book.body %></td>
+            </tr>
             <% end %>
-          </td>
-          <td>
-            <%= link_to book_path(book.id) do %>
-              <%= book.title %>
-            <% end %>
-          </td>
-          <td><%= book.body %></td>
-        </tr>
-        <% end %>
-      </tbody>
-    </table>
+          </tbody>
+        </table>
+    </div>
   </div>
+</div>
