--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -2,40 +2,47 @@
   <%= flash[:success] %>
 </div>
 
-<h1>books#show</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-md-3">
+      <!--部分テンプレートUser info-->
+      <%= render 'users/user_info', user: @book.user, newbook: @newbook %>
+    </div>
 
-<!--User info-->
-<!--プロフィール編集ボタン-->
-<!--New book-->
-<%= render 'users/user_info', user: @book.user, newbook: @newbook %>
+    <div class="col-md-8 offset-md-1">
+      <!--Book detail bookの詳細ページ-->
+      <h2>Book detail</h2>
+        <table class="table">
+          <tbody>
+            <tr>
+              <td>
+                <%= link_to user_path(@book.user.id) do %>
+                  <%= image_tag @book.user.get_profile_image(100,100) %><br>
+                  <%= @book.user.name %>
+                <% end %>
+              </td>
+              <td>
+                <%= link_to book_path(@book.id) do %>
+                  <%= @book.title %>
+                <% end %>
+              </td>
+              <td><%= @book.body %></td>
 
-<!--Book detail bookの詳細ページ-->
-<h2>Book detail</h2>
-  <table>
-    <tbody>
-      <tr>
-        <td>
-          <%= link_to user_path(@book.user.id) do %>
-            <%= image_tag @book.user.get_profile_image(100,100) %><br>
-            <%= @book.user.name %>
-          <% end %>
-        </td>
-        <td>
-          <%= link_to book_path(@book.id) do %>
-            <%= @book.title %>
-          <% end %>
-        <td><%= @book.body %></td>
-        <td>
-          <!--Editボタン-->
-          <% if @book.user.id == current_user.id %>
-            <%= link_to "Edit", edit_book_path(@book.id) %></td>
-          <% end %>
-        <td>
-          <!--Destroyボタン-->
-          <% if @book.user == current_user %>
-            <%= link_to "Destroy", book_path(@book.id), method: :delete, "data-confirm" => "本当に消しますか？"%>
-          <% end %>
-        </td>
-      </tr>
-    </tbody>
-  </table>
+              <!--Editボタン-->
+              <td>
+                <% if @book.user.id == current_user.id %>
+                  <%= link_to "Edit", edit_book_path(@book.id), class:"btn btn-sm btn-success" %>
+                <% end %>
+              </td>
+              <!--Destroyボタン-->
+              <td>
+                <% if @book.user.id == current_user.id %>
+                  <%= link_to "Destroy", book_path(@book.id), class:"btn btn-sm btn-danger", method: :delete, "data-confirm" => "本当に消しますか？"%>
+                <% end %>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+    </div>
+  </div>
+</div>
