--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,67 +5,84 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-    <!-- FontAwesomeの読み込み -->
-    <script src="https://kit.fontawesome.com/5ede89d9f7.js" crossorigin="anonymous"></script>
-
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
     <header>
-      <a href="/"><span>Bookers</span></a>
-      <% if user_signed_in? %>
-        <li>
-          <%= link_to user_path(current_user.id) do %>
-            <i class="fa-solid fa-house-chimney"></i> Home
-          <% end %>
-        </li>
-        <li>
-          <%= link_to users_path do %>
-            <i class="fa-solid fa-users"></i> Users
-          <% end %>
-        </li>
-        <li>
-          <%= link_to books_path do %>
-            <i class="fa-solid fa-book-open"></i> Books
-          <% end %>
-        </li>
-        <li>
-          <%= link_to destroy_user_session_path, method: :delete do %>
-            <i class="fa-solid fa-right-from-bracket"></i> Log out
-          <% end %>
-        </li>
-      <% else %>
-        <li>
-          <%= link_to root_path do %>
-            <i class="fa-solid fa-house-chimney"></i> Home
-          <% end %>
-        </li>
-        <li>
-          <%= link_to about_path do %>
-            <i class="fa-solid fa-link"></i> About
-          <% end %>
-        </li>
-        <li>
-          <%= link_to new_user_registration_path do %>
-            <i class="fa-solid fa-user-plus"></i> Sign up
-          <% end %>
-        </li>
-        <li>
-          <%= link_to new_user_session_path do %>
-            <i class="fa-solid fa-right-to-bracket"></i> Log in
-          <% end %>
-        </li>
-      <% end %>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+          <a class="navbar-brand" href="/"><span>Bookers</span></a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="navbar-collapse collapse" id="navbarNavDropdown" style>
+            <ul class="navbar-nav ml-auto">
+
+            <% if user_signed_in? %>
+              <li>
+                <%= link_to user_path(current_user.id), class: "nav-link text-light" do %>
+                  <i class="fas fa-home"></i> Home
+                <% end %>
+              </li>
+              <li>
+                <%= link_to users_path, class: "nav-link text-light" do %>
+                  <i class="fas fa-users"></i> Users
+                <% end %>
+              </li>
+              <li>
+                <%= link_to books_path, class: "nav-link text-light" do %>
+                  <i class="fas fa-book-open"></i> Books
+                <% end %>
+              </li>
+              <li>
+                <%= link_to destroy_user_session_path, class: "nav-link text-light", method: :delete do %>
+                  <i class="fas fa-sign-out-alt"></i> Log out
+                <% end %>
+              </li>
+            <% else %>
+              <li>
+                <%= link_to root_path, class: "nav-link text-light" do %>
+                  <i class="fas fa-home"></i> Home
+                <% end %>
+              </li>
+              <li>
+                <%= link_to about_path, class: "nav-link text-light" do %>
+                  <i class="fas fa-link"></i> About
+                <% end %>
+              </li>
+              <li>
+                <%= link_to new_user_registration_path, class: "nav-link text-light" do %>
+                  <i class="fas fa-user-plus"></i> Sign up
+                <% end %>
+              </li>
+              <li>
+                <%= link_to new_user_session_path, class: "nav-link text-light" do %>
+                  <i class="fas fa-sign-in-alt"></i> Log in
+                <% end %>
+              </li>
+            <% end %>
+            </ul>
+          </div>
+        </div>
+      </nav>
     </header>
-  <%= flash[:notice] %>
-  <%= yield %>
+    <main>
+      <p id="notice"><%= flash[:notice] %></p>
+      <%= yield %>
+    </main>
   </body>
+
   <footer>
-    <div>
-      <p>CopyRight Infratop.inc</p>
+    <div class="container mt-5">
+      <div class="row">
+        <div class="mx-auto">
+          <p>CopyRight Infratop.inc</p>
+        </div>
+      </div>
     </div>
   </footer>
 
