--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,15 +1,33 @@
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto ">
+      <h2>User info</h2>
+      <% if @user.errors.any? %>
+        <h3><%= @user.errors.count %> errors prohibited this obj from being saved:</h3>
+        <ul>
+          <% @user.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+        </ul>
+      <% end %>
 
-<h1>Users#edit</h1>
-
-<h2>User info</h2>
-  <%= form_with model: @user do |f| %>
-
-    <label for="inputName">Name</label><br>
-      <%= f.text_field :name, id:"inputName" %><br>
-    <label for="inputImage">Image</label><br>
-      <%= f.file_field :profile_image, accept: "image/*" %><br>
-    <label for="inputIntroduction">Introduction</label><br>
-      <%= f.text_area :introduction %><br>
-
-    <%= f.submit "Update User" %>
-  <% end %>
+        <%= form_with model: @user do |f| %>
+          <div class="form-group">
+            <label for="user_name">Name</label>
+              <%= f.text_field :name, class:"form-control name"%>
+          </div>
+          <div class="form-group">
+            <label for="user_image">Image</label>
+              <%= f.file_field :profile_image, class:"form-control-file user_image", accept: "image/*" %>
+          </div>
+          <div class="form-group">
+            <label for="user_introduction">Introduction</label>
+              <%= f.text_area :introduction, class:"form-control introduction" %>
+          </div>
+          <div class="form-group">
+            <%= f.submit "Update User", class:"btn btn-secondary" %>
+          </div>
+        <% end %>
+    </div>
+  </div>
+</div>
