--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,27 +1,31 @@
-<h1>Users#index</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-md-3">
+      <!--部分テンプレートUser info-->
+      <%= render 'user_info', user: @user, newbook: @newbook%>
+    </div>
 
-<!--User info-->
-<!--プロフィール編集ボタン-->
-<!--New book-->
-<%= render 'user_info', user: @user, newbook: @newbook%>
-
-<!--Users-->
-<h2>Users</h2>
-  <div>
-    <table>
-      <thead>
-        <tr>
-          <th>image</th>
-          <th>name</th>
-        </tr>
-      </thead>
-      <tbody>
-        <% @users.each do |user| %>
-        <tr>
-          <td><%= image_tag user.get_profile_image(80,80) %></td>
-          <td><%= user.name %></td>
-          <td><%= link_to "Show", user_path(user.id) %></td>
-        </tr>
-        <% end %>
-      </tbody>
-    </table>
+    <div class="col-md-8 offset-md-1">
+      <!--Users-->
+      <h2>Users</h2>
+          <table class="table">
+            <thead>
+              <tr>
+                <th>image</th>
+                <th>name</th>
+                <th colspan="3"></th>
+              </tr>
+            </thead>
+            <tbody>
+              <% @users.each do |user| %>
+              <tr>
+                <td><%= image_tag user.get_profile_image(80,80) %></td>
+                <td><%= user.name %></td>
+                <td><%= link_to "Show", user_path(user.id) %></td>
+              </tr>
+              <% end %>
+            </tbody>
+          </table>
+    </div>
+  </div>
+</div>
