--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,34 +1,44 @@
-<h1>Users#show</h1>
-
-<!--User info-->
-<!--プロフィール編集ボタン-->
-<!--New book-->
-<%= render 'user_info', user: @user, newbook: @newbook %>
-
-
-<!--そのユーザーの投稿一覧[Books]-->
 <div>
-  <h2>Books</h2>
-  <table>
-    <thead>
-      <tr>
-        <th></th>
-        <th>Title</th>
-        <th>Opinion</th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @books.each do |book| %>
-      <tr>
-        <td><%= image_tag book.user.get_profile_image(80,80) %></td>
-        <td>
-          <%= link_to book_path(book.id) do %>
-            <%= book.title %>
+  <%= flash[:success] %>
+</div>
+
+<div class="container px-5 px-sm-0">
+  <div class="row">
+    <div class="col-md-3">
+      <!--部分テンプレートUser info-->
+      <%= render 'user_info', user: @user, newbook: @newbook %>
+    </div>
+
+    <!--そのユーザーの投稿一覧[Books]-->
+    <div class="col-md-8 offset-md-1">
+      <h2>Books</h2>
+      <table class="table table-hover table-inverse">
+        <thead>
+          <tr>
+            <th></th>
+            <th>Title</th>
+            <th>Opinion</th>
+            <th colspan="3"></th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @books.each do |book| %>
+            <tr>
+              <td>
+                <%= link_to user_path(@user) do %>
+                  <%= image_tag book.user.get_profile_image(80,80) %>
+                <% end %>
+              </td>
+              <td>
+                <%= link_to book_path(book.id) do %>
+                  <%= book.title %>
+                <% end %>
+              </td>
+              <td><%= book.body %></td>
+            </tr>
           <% end %>
-        </td>
-        <td><%= book.body %></td>
-      </tr>
-      <% end %>
-    </tbody>
-  </table>
+        </tbody>
+      </table>
+    </div>
+  </div>
 </div>
